core_directory/tests/fixtures/invalid_no_sig/duplicated_key.core
CAPI=2:
  key1: value
  key1: again
name: vendor:library:core:1.0.0
description: "A valid core file for testing with signature."
provider:
  name: github
  user: myuser
  repo: myrepo
  version: "v1.0.0"